[tool.poetry]
name = "ryver-export"
version = "0.1.0"
description = ""
authors = ["Jonathan Ballet <jon@multani.info>"]

[tool.poetry.dependencies]
python = "^3.9"
httpx = "^0.17.0"
loguru = "^0.5.3"

[tool.poetry.dev-dependencies]
isort = "^5.7.0"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
